--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "cmdk": "latest",
     "date-fns": "latest",
     "embla-carousel-react": "latest",
-    "googleapis": "latest",
+    "googleapis": "^144.0.0",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
