--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "@vercel/analytics": "latest",
     "ai": "latest",
     "autoprefixer": "^10.4.20",
+    "chromium-bidi": "^7.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "latest",
     "date-fns": "latest",
+    "electron": "^37.2.5",
     "embla-carousel-react": "latest",
     "geist": "^1.3.1",
     "input-otp": "latest",
@@ -57,6 +59,7 @@
     "next-auth": "latest",
     "next-themes": "latest",
     "nodemailer": "latest",
+    "playwright": "^1.54.2",
     "playwright-aws-lambda": "latest",
     "playwright-core": "latest",
     "react": "^18",
