--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "postinstall": "playwright install --with-deps",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
