--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "postinstall": "echo Skipping browser download",
-    "vercel-build": "PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1 next build",
+    "postinstall": "playwright install",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
