--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "electron": "^37.2.5",
     "embla-carousel-react": "latest",
     "geist": "^1.3.1",
+    "html-to-text": "^9.0.5",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
