--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,43 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# ✅ Node modules
+/node_modules/
 
-# dependencies
-/node_modules
-
-# next.js
+# ✅ Next.js build output
 /.next/
 /out/
 
-# production
-/build
+# ✅ Production builds
+/build/
+/dist/
 
-# debug
+# ✅ Vercel deployment config
+.vercel/
+
+# ✅ Environment variables
+.env
+.env.*       # includes .env.local, .env.production, etc.
+
+# ✅ Logs and debug files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files
-.env*
-
-# vercel
-.vercel
-
-# typescript
+# ✅ TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# ✅ Jest
+/coverage/
+/jest-test-results.json
+
+# ✅ Cypress
+/cypress/screenshots/
+/cypress/videos/
+/cypress/downloads/
+
+# ✅ VS Code
+.vscode/
+
+# ✅ OS / system files
+.DS_Store
+Thumbs.db
