--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 
 # ✅ Environment variables
 .env
-.env.*       # includes .env.local, .env.production, etc.
+.env.*
 
 # ✅ Logs and debug files
 npm-debug.log*
