--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ai-email-sorter",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "cypress:open": "cypress open",
@@ -75,6 +76,7 @@
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "util": "latest",
     "vaul": "latest",
     "zod": "4.0.14"
@@ -85,18 +87,19 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.8",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "cypress": "^13.6.3",
+    "cypress": "^13.17.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "node-mocks-http": "^1.13.0",
     "postcss": "^8.5",
     "start-server-and-test": "^2.0.3",
+    "supertest": "^7.1.4",
     "tailwindcss": "^3.4.17",
-    "ts-jest": "^29.0.0",
+    "ts-jest": "^29.4.1",
     "typescript": "^5"
   }
 }
